LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/Loyalty_Program_Setup_Level__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program Setup Level</label>
    <nameField>
        <label>Program Setup Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Setup Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>