LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Achievable_Bought_Items__c.field-meta.xml
<CustomField>
    <fullName>Achievable_Bought_Items__c</fullName>
    <description>Quantity of items bought in order to achieve the loyalty level</description>
    <label>Achievable Bought Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>