LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Achievable_Points__c.field-meta.xml
<CustomField>
    <fullName>Achievable_Points__c</fullName>
    <description>Points to reach in order to get the loyalty level</description>
    <label>Achievable Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>