LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Achievable_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Achievable_Purchases__c</fullName>
    <description>number of purchases in order to achieve loyalty level</description>
    <label>Achievable Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>