LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Is_Bought_Items_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Bought_Items_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the quantity of bought items is mandatory to achieve the loyalty level</description>
    <inlineHelpText>Defines if the quantity of bought items is mandatory to achieve the loyalty level</inlineHelpText>
    <label>Is Bought Items Mandatory</label>
    <type>Checkbox</type>
</CustomField>