LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Is_Points_Manadatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Points_Manadatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the quantity of points is mandatory to achieve the loyalty level</description>
    <inlineHelpText>Defines if the quantity of points is mandatory to achieve the loyalty level</inlineHelpText>
    <label>Is Number of Points Manadatory</label>
    <type>Checkbox</type>
</CustomField>