LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Loyalty_Level__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Level__c</fullName>
    <label>Loyalty Level</label>
    <referenceTo>Loyalty_Level__c</referenceTo>
    <relationshipName>Program_Setup_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>