LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Loyalty_Program_Setup__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Setup__c</fullName>
    <label>Loyalty Program Setup</label>
    <referenceTo>Loyalty_Program_Setup__c</referenceTo>
    <relationshipName>Program_Setup_Levels</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>