LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Loyalty_Reward_Achievable__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Reward_Achievable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A possible reward for when the customer reaches the loyalty level</description>
    <label>Loyalty Reward Achievable</label>
    <referenceTo>Loyalty_Reward__c</referenceTo>
    <relationshipName>Program_Setup_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>