LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Level__c/fields/Program_Setup_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Setup_Level_Code__c</fullName>
    <displayFormat>SETUPLEVEL-{0000}</displayFormat>
    <label>Program Setup Level Code</label>
    <type>AutoNumber</type>
</CustomField>